test/ingress/reverse_proxy/whoami-ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: dev
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`whoami.local`)
      kind: Rule
      services:
        - name: whoami
          port: 80
